lib/libui/snapshots/libui__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: lib/libui/bottom_pane.rs
expression: "render_to_first_char_string(&pane, area)"
---
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask Agent of FreeChaOS to do something.       
                                                
  ? for shortcuts            100% context left
