lib/libui/snapshots/libui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: lib/libui/bottom_pane.rs
expression: "render_to_first_char_string(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
› Ask Agent of FreeChaOS to d 
                              
           100% context left
