lib/libui/snapshots/libui__bottom_pane__tests__status_only_snapshot.snap
---
source: lib/libui/bottom_pane.rs
expression: "render_to_first_char_string(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask Agent of FreeChaOS to do something.       
                                                
  ? for shortcuts            100% context left
